...
  const AdminHomeScreen({super.key});

  @override
  Widget build(BuildContext context) {
    final stores = [
      {'id': 'citygross', 'name': 'City Gross'},
      {'id': 'willys', 'name': 'Willys'},
      {'id': 'lidl', 'name': 'Lidl'},
      {'id': 'icamaxi', 'name': 'ICA Maxi'},
      {'id': 'rusta', 'name': 'Rusta'},
      {'id': 'xtra', 'name': 'Xtra'},
    ];

...
